# njuns.py

./: README.md  __init__.py  exceptions.py  http.py  pyproject.toml  utils.py
examples/: njuns_example.py
models/: user.py
njuns/: __init__.py  client.py  http.py  route.py
njuns/models/: entity.py  predefined_query.py
njuns/routes/: _base.py  entities.py  services.py
routes/: _base.py  entities.py  queries.py
